--- a/연습/react prc/youtubeAPI/src/components/video_item/video_item.module.css
+++ b/연습/react prc/youtubeAPI/src/components/video_item/video_item.module.css
@@ -1,6 +1,12 @@
 .container{
-    width: 50%;
+    /* width: 50%; */
     padding: 0.2rem;
+}
+.container.grid{
+    width: 50%;
+}
+.container.list{
+    width: 100%;
 }
 .video{
     width: 100%;
