--- a/연습/react project/takehome/src/app.css
+++ b/연습/react project/takehome/src/app.css
@@ -1,22 +1,27 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 .app{
 	text-align: center;
 }
 .container{
 	display: flex;
+	justify-content: center;
+	/* align-items: center; */
+	flex-flow: row nowrap;
 	margin:  2rem auto;
-	width: 80%;
+	width: 90%;
 	height: 100%;
-	background-color: red;
-	/* 조정필요 */
-	text-align: center;
-	/* line-height: 50rem; */
+	/* background-color: red; */
 }
-.canvas{
-	/* flex: 1 1 80%; */
+/* .canvas{
+	flex: 1 1 80%;
 	background-color: aqua;
-}
+} */
 
 /* .list{
 	flex: 1 1 20%;
-	background-color: aquamarine;
+	
 } */
