--- a/KoreaITAcademy/clone coding/jkSurgery/css/main.css
+++ b/KoreaITAcademy/clone coding/jkSurgery/css/main.css
@@ -9,7 +9,7 @@
         position: relative;}
 #header .logo{float: left;}
 #header .info_mn{position: absolute; 
-                 top:20px; left:210px;}
+                 top:20px; right:210px;}
 #header .info_mn > li{float: left; 
                   margin-right: 10px;}
 #header .info_mn > li > a{ font-size: 10px;}
@@ -18,7 +18,7 @@
 #header .q_mn > li{float: left; margin-right:15px;}
 #header .q_mn > li> a{ font-size: 15px;}
 #header .lang{position: absolute; top:20px; right:20px;}
-
+#header .notice{position: absolute; top: 20px; left:210px;}
 #header .main_nav{
         width: 100%; height: 45px;
         border-top:1px solid #ccc;
@@ -42,6 +42,8 @@
 #header .h_bottom{width: 100%; height:140px;
                 background : url(../images/bg_main_slogan.jpg) no-repeat 50% 0;
 }      
+
+
 
 #main_img{float: left;
         width: 100%; height: 400px;
