practice : socket.io adapter, (sids,rooms)  /  room Count하기

--- a/nomad/zoomClone/src/views/home.pug
+++ b/nomad/zoomClone/src/views/home.pug
@@ -12,13 +12,18 @@ html(lang="en")
         main   
             h2 welcome to Noom
                 div#welcome
-                    form    
+                    form
                         input(placeholder="room name", required, type="text")
                         button Enter room
+                    h4 Open Rooms : 
+                    ul
                 div#room
                     h3
                     ul 
-                    form
+                    form#name
+                        input(placeholder="Nickname", required, type="text")
+                        button Save
+                    form#msg
                         input(placeholder="message", required, type="text")
                         button Send
 
