--- a/nomad/nextjs/nextjs-intro/styles/globals.css
+++ b/nomad/nextjs/nextjs-intro/styles/globals.css
@@ -1,3 +1,9 @@
+body {
+  max-width: 520px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities;
